//#service-request-reply
syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc";
option java_outer_classname = "LogFinderProto";

// Log Finder Service definition
service LogFinderService {
  // Finds a log in the AWS S3 log files
  rpc FindLog (FindLogRequest) returns (FindLogReply) {}
}

// The request message containing details about the searched time interval (the time and the delta to compute the time intervals)
message FindLogRequest {
  string time = 1;
  string dtInSeconds = 2;
}

// The response message containing the JSON response to the Client (contains the MD5 hash of the regex instances in found logs)
message FindLogReply {
  string message = 1;
}